syntax = "proto3";

package ipfs;

enum FileType {
    DIRECTORY = 0;
    FILE = 1;
}
